bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: agentarmy
    labels:
        com.docker.compose.project: agentarmy
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: agentarmy
        com.docker.compose.service: backend
    ports:
        - name: backend-5001
          port: 5001
          protocol: TCP
          targetPort: backend-5001

# check if there is at least one published port
