bridge/base/dashboard-service.yaml
#! dashboard-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: dashboard-published
    namespace: agentarmy
    labels:
        com.docker.compose.project: agentarmy
        com.docker.compose.service: dashboard
spec:
    selector:
        com.docker.compose.project: agentarmy
        com.docker.compose.service: dashboard
    ports:
        - name: dashboard-3000
          port: 3000
          protocol: TCP
          targetPort: dashboard-3000
